--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
+    <section id="welcome-section">welcome section 
+      <h1>  Welcome to my portifolio </h1>
+    </section>
+    
     <p>Hello World.. We are software developers</p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
