added a navbar and link

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
+   <nav id="navbar">navigation bar</nav>
   <section id="welcome-section">
     <h1> Welcome to my portifolio </h1>
   </section>
-
+  
   <section id="projects">
+    <a href="www.google.com">link to a project</a>
     <div class="project-tile"></div>
   </section>
 </body>
