add link to project tile

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 </head>
 
 <body>
-   <nav id="navbar">navigation bar</nav>
+  <nav id="navbar">
+    <a href="#welcome-section">About</a>
+  </nav>
+
   <section id="welcome-section">
     <h1> Welcome to my portifolio </h1>
   </section>
-  
+
   <section id="projects">
+    <div class="project-tile">
+      <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" id="profile-link" target="_blank"></a>
+    </div>
     <a href="www.google.com">link to a project</a>
-    <div class="project-tile"></div>
   </section>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
