--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 
 <body>
   <nav id="navbar">
-    <a href="#welcome-section">About</a>
+    <ul class="nav-list">
+      <li><a href="#welcome-section">About</a></li>
+      <li><a href="#projects">Work</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </nav>
 
-  <section id="welcome-section">
-    <h1> Welcome to my portifolio </h1>
-  </section>
-
-  <section id="projects">
-    <div class="project-tile">
-      <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" id="profile-link" target="_blank"></a>
-    </div>
-    <a href="www.google.com">link to a project</a>
-  </section>
+  <div id="container">
+    <section id="welcome-section">
+      <h1>Welcome to my Portfolio</h1>
+    </section>
+  
+    <section id="projects">
+      <div class="project-tile">
+        <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" id="profile-link" target="_blank"></a>
+      </div>
+      <a href="www.google.com">link to a project</a>
+    </section>
+  </div>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
 </script>
